--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="font-serif text-xs text-center">Hello World</h1>
+    <!-- <h1 class="font-serif text-xs text-center">Hello World</h1>
     <h1 class="font-serif text-sm text-right">Hello World</h1>
     <h1 class="font-serif text-base">Hello World</h1>
     <h1 class="font-serif text-lg border-2 border-black">Hello World</h1>
@@ -18,6 +18,15 @@
 
     <div class="hello">
         Hello World
+    </div> -->
+    <div class="flex justify-center items-center w-full h-full">
+         <button id="hello" class="bg-[blue] px-5 py-2 text-white font-semibold">Hello</button>
     </div>
+    <div class="hidden items-center justify-center w-[200px] h-[200px] mx-auto mt-10 bg-sky-700">
+        <h1 id="helloActive" class="text-white font-bold">Hello</h1>
+    </div>
+
+    <script src="./dist/js/index.js"></script>
+
 </body>
 </html>
