--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="flex justify-center items-center w-full h-full">
          <button id="hello" class="bg-[blue] px-5 py-2 text-white font-semibold">Hello</button>
     </div>
-    <div class="hidden items-center justify-center w-[200px] h-[200px] mx-auto mt-10 bg-sky-700">
-        <h1 id="helloActive" class="text-white font-bold">Hello</h1>
+    <div id="helloActive" class="hidden items-center justify-center w-[200px] h-[200px] mx-auto mt-10 bg-sky-700">
+        <h1 class="text-white font-bold">Hello</h1>
     </div>
 
     <script src="./dist/js/index.js"></script>
